Speed up NodeSets by always keeping them in document order. Only sort when we get nodes in random order (such as for id()) or when merging NodeSets.

This removes the need for the sortByDocumentOrder function.

b=85893 r=Pike rs=jag