extensions/transformiix/source/xpath/NodeSet.h
@@ -1,4 +1,5 @@
-/*
+/* -*- Mode: C++; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*-
+ *
  * The contents of this file are subject to the Mozilla Public
  * License Version 1.1 (the "License"); you may not use this file
  * except in compliance with the License. You may obtain a copy of
@@ -26,218 +27,184 @@
  *
  */
 
-/**
- * NodeSet
-**/
+/*
+ * Implementation of an XPath NodeSet
+ */
 
 #ifndef TRANSFRMX_NODESET_H
 #define TRANSFRMX_NODESET_H
 
 #include "dom.h"
 #include "ExprResult.h"
+#include "txError.h"
 
 class NodeSet : public ExprResult
 {
 
 public:
 
-      //----------------/
-     //- Constructors -/
-    //----------------/
-
-    /**
-     * Creates a new NodeSet with the default Size
-    **/
+    /*
+     * Creates a new empty NodeSet
+     */
     NodeSet();
 
-    /**
-     * Creates a new NodeSet with the specified Size
-    **/
-    NodeSet(int size);
+    /*
+     * Creates a new NodeSet containing the supplied node
+     */
+    NodeSet(Node* aNode);
 
-    /**
-     * Creates a new NodeSet using the given NodeSet
-    **/
-    NodeSet(const NodeSet& source);
+    /*
+     * Creates a new NodeSet, copying the Node references from the source
+     * NodeSet
+     */
+    NodeSet(const NodeSet& aSource);
 
-    /**
-     * Destructor for NodeSet, will not delete Node References
-    **/
-    virtual ~NodeSet();
+    /*
+     * Destructor for NodeSet, will not delete referenced Nodes
+     */
+    virtual ~NodeSet()
+    {
+        delete [] mElements;
+    }
 
-    /**
-     * Adds the specified Node to this NodeSet if it is not already
-     * contained within in this NodeSet.
-     * @param node the Node to add to the NodeSet
-     * @return true if the Node is added to the NodeSet
-    **/
-    MBool add(Node* node);
+    /*
+     * Adds the specified Node to this NodeSet if it is not already in this
+     * NodeSet. The node is inserted according to document order.
+     * @param  aNode the Node to add to the NodeSet
+     * @return errorcode.
+     */
+    nsresult add(Node* aNode);
 
-    /**
-     * Adds the specified Node to the NodeSet at the specified index,
-     * as long as the Node is not already contained within the set
-     * @param node the Node to add to the NodeSet
-     * @return true if the Node is added to the NodeSet
-     * @exception IndexOutOfBoundsException
-    **/
-    MBool add(int index, Node* node);
+    /*
+     * Adds the nodes in specified NodeSet to this NodeSet. The resulting
+     * NodeSet is sorted in document order and does not contain any duplicate
+     * nodes.
+     * @param  aNodes the NodeSet to add, must be in document order.
+     * @return errorcode.
+     */
+    nsresult add(const NodeSet* aNodes);
 
-    /**
-     * Removes all elements from the list
-    **/
-    void clear();
+    /*
+     * Append API
+     * These functions should be used with care.
+     * They are intended to be used when the caller assures that the resulting
+     * NodeSet remains in document order.
+     * Abuse will break document order, and cause errors in the result.
+     * These functions are significantly faster than the add API, as no
+     * Node::OrderInfo structs will be generated.
+     */
 
-    /**
-     * Returns true if the specified Node is contained in the set.
-     * if the specfied Node is null, then if the NodeSet contains a null
-     * value, true will be returned.
-     * @param node the element to search the NodeSet for
-     * @return true if specified Node is contained in the NodeSet
-    **/
-    MBool contains(Node* node);
+    /*
+     * Appends the specified Node to the end of this NodeSet
+     * @param  aNode the Node to append to the NodeSet
+     * @return errorcode.
+     */
+    nsresult append(Node* aNode);
 
-    /**
-     * Copies the elements of this NodeSet, into the destination NodeSet
-    **/
-    void copyInto(NodeSet& dest) const;
+    /*
+     * Appends the nodes in the specified NodeSet to the end of this NodeSet
+     * @param  aNodes the NodeSet to append to the NodeSet
+     * @return errorcode.
+     */
+    nsresult append(const NodeSet* aNodes);
 
-    /**
-     * Returns the Node at the specified position in this NodeSet.
-     * @param index the position of the Node to return
-     * @exception IndexOutOfBoundsException
-    **/
-    Node* get(int index);
+    /*
+     * Reverse the order of the nodes.
+     */
+    void reverse();
 
-    /**
-     * Returns true if duplicate checking is enabled, otherwise false.
-     *
-     * @return true if duplicate checking is enabled, otherwise false.
-    **/
-    MBool getDuplicateChecking();
+    /*
+     * Removes all nodes from this nodeset
+     */
+    void clear()
+    {
+        mElementCount = 0;
+    }
 
-    /**
+    /*
      * Returns the index of the specified Node,
      * or -1 if the Node is not contained in the NodeSet
-     * @param node the Node to get the index for
-    **/
-    int indexOf(Node* node);
+     * @param  aNode the Node to get the index for
+     * @return index of specified node or -1 if the node does not exist
+     */
+    int indexOf(Node* aNode) const;
 
-    /**
+    /*
+     * Returns true if the specified Node is contained in the set.
+     * @param  aNode the Node to search for
+     * @return true if specified Node is contained in the NodeSet
+     */
+    MBool contains(Node* aNode) const
+    {
+        return indexOf(aNode) >= 0;
+    }
+
+    /*
+     * Returns the Node at the specified position in this NodeSet.
+     * @param  aIndex the position of the Node to return
+     * @return Node at specified position
+     */
+    Node* get(int aIndex) const;
+
+    /*
      * Returns true if there are no Nodes in the NodeSet.
      * @return true if there are no Nodes in the NodeSet.
-    **/
-    MBool isEmpty();
+     */
+    MBool isEmpty() const
+    {
+        return mElementCount == 0;
+    }
 
-    /**
-     * Removes the Node at the specified index from the NodeSet
-     * @param index the position in the NodeSet to remove the Node from
-     * @return the Node that was removed from the list
-    **/
-    Node* remove(int index);
-
-    /**
-     * Removes the the specified Node from the NodeSet
-     * @param node the Node to remove from the NodeSet
-     * @return true if the Node was removed from the list
-    **/
-    MBool remove(Node* node);
-
-    /**
-     * Enables or disables checking for duplicates.  By default
-     * the #add method will check for duplicate nodes. This should
-     * only be disabled when no possibility of duplicates could occur.
-     *
-     * @param checkDuplicates an MBool indicating, when true, to perform duplicate checking,
-     * otherwise duplicate checking is disabled.
-    **/
-    void setDuplicateChecking(MBool checkDuplicates);
-
-    /**
+    /*
      * Returns the number of elements in the NodeSet
      * @return the number of elements in the NodeSet
-    **/
-    int size() const;
+     */
+    int size() const
+    {
+        return mElementCount;
+    }
 
-    /**
-     * Creates a String representation of this NodeSet
-     * @param str the destination string to append the String representation to.
-    **/
-    void toString(String& str);
-
-      //------------------------------------/
-     //- Virtual Methods from: ExprResult -/
-    //------------------------------------/
-
-    /**
-     * Returns the type of ExprResult represented
-     * @return the type of ExprResult represented
-    **/
-    virtual short getResultType();
-
-    /**
-     * Converts this ExprResult to a Boolean (MBool) value
-     * @return the Boolean value
-    **/
-    virtual MBool booleanValue();
-
-    /**
-     * Converts this ExprResult to a Number (double) value
-     * @return the Number value
-    **/
-    virtual double numberValue();
-
-    /**
-     * Creates a String representation of this ExprResult
-     * @param str the destination string to append the String representation to.
-    **/
-    virtual void stringValue(String& str);
+    /*
+     * Virtual methods from ExprResult
+     */
+    short getResultType();
+    MBool booleanValue();
+    double numberValue();
+    void stringValue(String& aStr);
 
 private:
 
+    /*
+     * Makes sure that the mElements buffer contains at least aSize elements.
+     * If a new allocation is required the elements are copied over to the new
+     * buffer
+     * @param  aSize requested number of elements
+     * @return true if allocation succeded, false on out of memory
+     */
+    MBool ensureSize(int aSize);
 
-      //-------------------/
-     //- Private Members -/
-    //-------------------/
+    /*
+     * Finds position in the mElements buffer where a node should be inserted
+     * to keep the nodeset in document order. Searches the positions
+     * aFirst-aLast, including both aFirst and aLast.
+     * @param  aNode  Node to find insert position for
+     * @param  aFirst First index to search, this index will be searched
+     * @param  aLast  Last index to search, this index will be searched
+     * @param  aPos   out-param. Will be set to the index where to insert the
+     *                node. The node should be inserted before the node at
+     *                this index. This value is always >= aFirst and
+     *                <= aLast + 1. This value is always set, even if aNode
+     *                already exists in the NodeSet.
+     * @return true if the node should be inserted, false if it already exists
+     *         in the NodeSet
+     */
+    MBool findPosition(Node* aNode, int aFirst, int aLast, int& aPos) const;
 
-    static const int DEFAULT_SIZE;
+    Node** mElements;
+    int mBufferSize;
+    int mElementCount;
 
-    Node** elements;
-
-    int initialSize;
-    int bufferSize;
-
-    MBool checkDuplicates;
-
-    /**
-     * The next available location in the elements array
-    **/
-    int elementCount;
-
-      //-------------------/
-     //- Private Methods -/
-    //-------------------/
-
-    /**
-     * Helper method for constructors
-    **/
-    void initialize(int size);
-
-    /**
-     * increase the NodeSet capacity by a factor of its initial size
-    **/
-    void increaseSize();
-
-    /**
-     * Shifts all elements at the specified index to down by 1
-    **/
-    void shiftDown(int index);
-
-    /**
-     * Shifts all elements at the specified index up by 1
-    **/
-    void shiftUp(int index);
-
-}; //-- NodeSet
+};
 
 typedef NodeSet txResultTreeFragment;
 
